@@ -1,5 +1,12 @@
 2005-01-22  Bruno Haible  <bruno@clisp.org>
 
+	* compiler.lisp (c-DIRECT-FUNCTION-CALL): Fix error and wrong warning
+	when a call is compiled that has :ALLOW-OTHER-KEYS T and other keyword
+	arguments.
+	Found by Paul Dietz's ansi-tests test suite.
+
+2005-01-22  Bruno Haible  <bruno@clisp.org>
+
 	* compiler.lisp (compile): If there were errors, return an error-
 	signalling closure, not NIL.
 	(compiled-with-errors): New function.
